# Cyber-Intelligence

./: .gitignore  .gitlab-ci.yml  .graphifyignore  .trivyignore  AGENTS.md  Dockerfile  Dockerfile.collector  README.md  populate_demo_data.py  pyproject.toml  start-dashboard.bat  交付总结.md  关键词库管理功能设计方案.md  启动看板.bat  搜索分析学习闭环设计方案.md  语义向量化升级交付报告.md
docs/: v1-上线运维清单.md  产品设计方案.md  功能可用性清单.md  架构演进执行方案.md  用户操作指南.md
scripts/: build_runtime_graph.py  collector-entrypoint.sh
tests/: __init__.py  test_analytics_facade.py  test_api_analysis.py  test_api_backlog.py  test_api_collection.py  test_api_incidents.py  test_api_overview.py  test_api_query_snapshot.py  test_api_reports.py  test_api_reviews.py  test_api_watch.py  test_ci_rules.py  test_collection_pipeline.py  test_collector_service.py  test_collector_wheelhouse.py  test_dashboard_403.py  test_dashboard_http_parts.py  test_dashboard_views_facade.py  test_demo_data.py  test_embed.py  test_module_boundaries.py  test_packaging.py  test_report_boundaries.py  test_store_boundaries.py  test_trivy_gate.py  test_watch_config.py
yuqing/: __init__.py  alerts.py  analytics.py  analytics_health.py  analytics_learning.py  analytics_semantic.py  analytics_timeseries.py  analyze.py  architecture_check.py  budget.py  classify.py  cli.py  collect.py  collector_client.py  collector_service.py  config.py  dashboard.py  dashboard_api_v1.py  dashboard_context.py  dashboard_http.py  dashboard_runtime.py  dashboard_v2.html  dashboard_views.py  embed.py  health.py  insights.py  keywords.py  llm.py  login.py  normalization.py  relevance.py  (+8 more)
(+79 files in other folders)
